--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  position: relative;
 }
 
 body {
@@ -39,4 +40,10 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+.wrapper {
+  width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
 }
